--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Finch List</h1>
+<h1>Finch Details</h1>
 
-{% for finch in finches %}
-<a href="{% url 'detail' finch.id %}">
   <div class="card">
     <div class="card-content">
       <span class="card-title">{{ finch.name }}</span>
@@ -16,8 +14,10 @@
         <p>Age: Chick</p>
       {% endif %}
     </div>
+    <div class="card-action">
+        <a href="{% url 'finches_update' finch.id %}">Edit</a>
+        <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+    </div>
   </div>
-</a>
-{% endfor %}
 
 {% endblock %}
